[package]
name = "vv-instagram"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
glob = "0.3.1"
lazy_static = "1.4.0"
photon-rs = "0.3.2"
regex = "1.9.5"
tera = "1.19.1"
serde = "1.0.188"
actix = "0.13.1"
rayon = "1.8.0"
actix-rt = "2.9.0"
num_cpus = "1.16.0"
futures = "0.3.29"
async-std = "1.12.0"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
unidecode = "0.3.0"
log = "0.4.21"
env_logger = "0.11.3"

[profile.release]
codegen-units = 1
lto = false
